# algomania-gpu

./: Cargo.toml  Dockerfile  README.md  merge-kernel.py
src/: derivation.rs  gpu.rs  gpu_impl.rs  main.rs  pubkey_matcher.rs
src/opencl/: entry.cl  sha_bindings.cl
src/opencl/sha/: sha512.cl
