[package]
name = "algomania-gpu"
version = "0.2.0"
description = "Generate short Lisk addresses"
keywords = ["cryptocurrency", "algorand", "opencl"]
authors = [""]
readme = "README.md"
#repository = "https://github.com/webmaster128/lisk-vanity"
license = "BSD-2-Clause"

[features]
gpu = ["ocl"]
default = ["gpu"]

[dependencies]
clap = "2.30.0"
num_cpus = "1.8.0"
num-bigint = "0.4"
rand = "0.7.0"
hex = "0.4.0"
digest = "0.7.2"
num-traits = "0.2.0"
sha2 = "0.7"
ocl = { version = "0.19.3", optional = true }
reqwest = { version = "0.12", features = ["json"] }
algonaut = "0.4.1"
base32 = "0.4.0"
ring = "0.17.14"
byteorder = "1.3.2"
data-encoding = "2.9.0"
