[package]
name = "algomania-gpu"
version = "0.2.0"
description = "Generate short Lisk addresses"
keywords = ["cryptocurrency", "algorand", "opencl"]
authors = [""]
readme = "README.md"
#repository = "https://github.com/webmaster128/lisk-vanity"
license = "BSD-2-Clause"

[features]
gpu = ["ocl"]
default = ["gpu"]

[dependencies]
clap = "2.30.0"
num_cpus = "1.16.0"
num-bigint = "0.4.6"
rand = "0.7.0"
hex = "0.4.3"
digest = "0.10.7"
num-traits = "0.2.19"
sha2 = "0.10.8"
ocl = { version = "0.19.3", optional = true }
reqwest = { version = "0.12", features = ["json"] }
algonaut = "0.4.2"
base32 = "0.5.1"
ring = "0.17.14"
byteorder = "1.5.0"
data-encoding = "2.9.0"
